--- a/views/index.slim
+++ b/views/index.slim
@@ -13,7 +13,7 @@ doctype html
   html.ie
 == '<!--[if !(IE)]><!--> <html class=""> <!--<![endif]-->'
 head
-  title sinatra + angular = crazy awesome
+  title Text-A-List
   meta charset="utf-8"
   meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
   link href="/assets/app.css" rel="stylesheet"
